@@ -52,6 +52,7 @@ HEADER = r'''%% Generated by Sphinx.
 %(numfig_format)s
 %(pageautorefname)s
 %(tocdepth)s
+%(secnumdepth)s
 %(preamble)s
 
 \title{%(title)s}
@@ -77,6 +78,7 @@ FOOTER = r'''
 '''
 
 URI_SCHEMES = ('mailto:', 'http:', 'https:', 'ftp:')
+SECNUMDEPTH = 3
 
 
 class collected_footnote(nodes.footnote):
@@ -323,6 +325,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
         'transition':      '\n\n\\bigskip\\hrule{}\\bigskip\n\n',
         'figure_align':    'htbp',
         'tocdepth':        '',
+        'secnumdepth':     '',
         'pageautorefname': '',
     }
 
@@ -438,8 +441,11 @@ class LaTeXTranslator(nodes.NodeVisitor):
             #   tocdepth =  1: show parts, chapters and sections
             #   tocdepth =  2: show parts, chapters, sections and subsections
             #   ...
-            self.elements['tocdepth'] = ('\\setcounter{tocdepth}{%d}' %
-                                         (document['tocdepth'] + self.top_sectionlevel - 2))
+            tocdepth = document['tocdepth'] + self.top_sectionlevel - 2
+            self.elements['tocdepth'] = '\\setcounter{tocdepth}{%d}' % tocdepth
+            if tocdepth >= SECNUMDEPTH:
+                # Increase secnumdepth if tocdepth is depther than default SECNUMDEPTH
+                self.elements['secnumdepth'] = '\\setcounter{secnumdepth}{%d}' % tocdepth
         if getattr(document.settings, 'contentsname', None):
             self.elements['contentsname'] = \
                 self.babel_renewcommand('\\contentsname', document.settings.contentsname)
