@@ -1,0 +1,9 @@
+test-toctree-max-depth
+======================
+
+.. toctree::
+   :numbered:
+   :maxdepth: 4
+
+   foo
+   bar
